--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GIT</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1> Sistema de control de versiones - Git </h1>
+    <h2> Este ejemplo de git </h2>
+    <div> 
+        <img src="img/yey.jpeg" width="300px" height="300px" alt="yey"> 
+    </div>
 </body>
 </html>
