--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1> Sistema de control de versiones - Git </h1>
     <h2> Este ejemplo de git </h2>
-    <div> 
+    <div class="caja"> 
         <img src="img/yey.jpeg" width="300px" height="300px" alt="yey"> 
     </div>
 </body>
